--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -4251,7 +4251,7 @@ section.case-study-area {
         left: 31%;
     }
     section.contact_area.inner_section {
-        padding: 30px 0 0 0;
+        padding: 0 0 0 0;
     }
     .contact_main_info {
         padding: 10px 20px 20px;
@@ -4348,6 +4348,11 @@ section.case-study-area {
     #wizard .card {
         padding: 30px !important;
     }
+
+    .flags{
+        padding: 0 0 30px 0 !important;
+    }
+
     .nav-words .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link {
         width: 100%;
         margin: 2px 0;
